Se actualizan clases con metodos